igt@gem_create@create-ext-cpu-access-big - incomplete - GEM_BUG_ON(!(((it->dma) & ((typeof(it->dma))(page_size) - 1)) == 0)), kernel BUG at drivers/gpu/drm/i915/gt/intel_migrate.c
<0> [179.002349] gem_crea-1281 6..... 177561920us : emit_pte.cold.24: emit_pte:433 GEM_BUG_ON(!(((it->dma) & ((typeof(it->dma))(page_size) - 1)) == 0))
<0> [179.002387] ---------------------------------
<4> [179.002478] ------------[ cut here ]------------
<2> [179.002480] kernel BUG at drivers/gpu/drm/i915/gt/intel_migrate.c:433!
<4> [179.002497] irq event stamp: 12923695
<4> [179.002497] invalid opcode: 0000 [#1] PREEMPT SMP NOPTI
<4> [179.002499] CPU: 6 PID: 1281 Comm: gem_create Tainted: G W 5.19.0-rc4-CI_DRM_11841-g5ad538f9740c+ #1
<4> [179.002502] hardirqs last enabled at (12923695): [<ffffffff81b24d20>] _raw_spin_unlock_irqrestore+0x50/0x60
<4> [179.002507] Hardware name: Intel Corporation Alder Lake Client Platform/AlderLake-S ADP-S DDR4 UDIMM CRB, BIOS ADLSFWI1.R00.2374.A00.2109091630 09/09/2021
<4> [179.002510] hardirqs last disabled at (12923694): [<ffffffff81b24ae7>] _raw_spin_lock_irqsave+0x47/0x50
<4> [179.002518] softirqs last enabled at (12915852): [<ffffffff81e0032d>] __do_softirq+0x32d/0x493
<4> [179.002523] softirqs last disabled at (12915819): [<ffffffff810b9046>] irq_exit_rcu+0xa6/0xe0
<4> [179.002514] RIP: 0010:emit_pte.cold.24+0x115/0x17e [i915]
<4> [179.002607] Code: 00 48 c7 c2 90 ed 74 a0 48 c7 c7 20 0a 71 a0 e8 6b fa a9 e0 bf 01 00 00 00 e8 61 c9 a9 e0 31 f6 bf 09 00 00 00 e8 85 05 9a e0 <0f> 0b e8 61 fd ff ff 48 c7 c1 78 3e 78 a0 ba 34 00 00 00 48 c7 c6
<4> [179.002613] RSP: 0018:ffffc900028a7478 EFLAGS: 00010246
<4> [179.002617] RAX: 0000000000000200 RBX: ffffc900028a74f8 RCX: 0000000000000006
<4> [179.002620] RDX: 0000000000000000 RSI: 0000000000000000 RDI: 0000000000000009
<4> [179.002622] RBP: 0000000000000000 R08: 0000000000000001 R09: 0000000000000001
<4> [179.002625] R10: 0000000000000001 R11: ffffc900028a72e0 R12: 000000000000081b
<4> [179.002627] R13: ffff8881f4f3bc40 R14: 0000000001840000 R15: ffff88811810c040
<4> [179.002630] FS: 00007f23e66cdc00(0000) GS:ffff88849f700000(0000) knlGS:0000000000000000
<4> [179.002633] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4> [179.002635] CR2: 000055b1bcd3d4e0 CR3: 000000011dfc8002 CR4: 0000000000770ee0
<4> [179.002638] PKRU: 55555554
<4> [179.002639] Call Trace:
<4> [179.002641] <TASK>
<4> [179.002643] intel_context_migrate_clear+0x151/0x4c0 [i915]
<4> [179.002712] __i915_ttm_move+0x1bd/0x9c0 [i915]
<4> [179.002791] ? _raw_spin_unlock_irqrestore+0x50/0x60
<4> [179.002795] ? dma_resv_iter_next+0x84/0xa0
<4> [179.002799] ? dma_resv_iter_first+0x3e/0xa0
<4> [179.002802] ? i915_deps_add_resv+0x48/0xb0 [i915]
<4> [179.002880] i915_ttm_move+0x295/0x410 [i915]
<4> [179.002957] ttm_bo_handle_move_mem+0xa1/0x140 [ttm]
<4> [179.002963] ttm_bo_validate+0xee/0x160 [ttm]
<4> [179.002968] __i915_ttm_get_pages+0x4f/0x230 [i915]
<4> [179.003040] i915_ttm_get_pages+0xad/0x140 [i915]
<4> [179.003110] ____i915_gem_object_get_pages+0x32/0xf0 [i915]
<4> [179.003180] __i915_gem_object_get_pages+0x89/0xa0 [i915]
<4> [179.003248] i915_vma_get_pages+0x114/0x1d0 [i915]
<4> [179.003325] i915_vma_pin_ww+0xd3/0xa90 [i915]
<4> [179.003400] eb_validate_vmas+0x1a1/0x840 [i915]
<4> [179.003470] i915_gem_do_execbuffer+0xbb1/0x2570 [i915]
<4> [179.003540] ? usage_match+0x11/0x20
<4> [179.003544] ? __lock_acquire+0x5d6/0x2940
<4> [179.003548] ? ___slab_alloc.constprop.87+0xba8/0x1570
<4> [179.003554] i915_gem_execbuffer2_ioctl+0x116/0x2c0 [i915]
<4> [179.003621] ? i915_gem_do_execbuffer+0x2570/0x2570 [i915]
<4> [179.003686] drm_ioctl_kernel+0xac/0x140
<4> [179.003690] drm_ioctl+0x201/0x3d0
<4> [179.003694] ? i915_gem_do_execbuffer+0x2570/0x2570 [i915]
<4> [179.003762] __x64_sys_ioctl+0x6a/0xa0
<4> [179.003766] do_syscall_64+0x37/0x80
<4> [179.003769] entry_SYSCALL_64_after_hwframe+0x46/0xb0
<4> [179.003773] RIP: 0033:0x7f23e95223db
<4> [179.003776] Code: 0f 1e fa 48 8b 05 b5 7a 0d 00 64 c7 00 26 00 00 00 48 c7 c0 ff ff ff ff c3 66 0f 1f 44 00 00 f3 0f 1e fa b8 10 00 00 00 0f 05 <48> 3d 01 f0 ff ff 73 01 c3 48 8b 0d 85 7a 0d 00 f7 d8 64 89 01 48
<4> [179.003783] RSP: 002b:00007fffb9fb4f48 EFLAGS: 00000246 ORIG_RAX: 0000000000000010
<4> [179.003788] RAX: ffffffffffffffda RBX: 0000000000000005 RCX: 00007f23e95223db
<4> [179.003791] RDX: 00007fffb9fb4fa0 RSI: 0000000040406469 RDI: 0000000000000005
<4> [179.003795] RBP: 00007fffb9fb4fa0 R08: 0000000000000005 R09: 00000002fd000000
<4> [179.003798] R10: 00007f23e960e2de R11: 0000000000000246 R12: 0000000040406469
<4> [179.003801] R13: 0000000000000005 R14: 0000000000000001 R15: 0000000000000000
<4> [179.003806] </TASK>
<4> [179.003807] Modules linked in: fuse snd_hda_codec_hdmi i915 x86_pkg_temp_thermal mei_hdcp coretemp kvm_intel snd_hda_codec_realtek snd_hda_codec_generic ledtrig_audio kvm ttm irqbypass crct10dif_pclmul drm_buddy crc32_pclmul ghash_clmulni_intel drm_display_helper snd_hda_intel drm_kms_helper snd_intel_dspcfg syscopyarea snd_hda_codec sysfillrect sysimgblt snd_hwdep e1000e snd_hda_core fb_sys_fops mei_me prime_numbers ptp snd_pcm mei i2c_i801 pps_core i2c_smbus intel_lpss_pci
<4> [179.003845] ---[ end trace 0000000000000000 ]---
<6> [179.132804] pcieport 0000:00:06.0: AER: Corrected error received: 0000:06:00.0
<4> [179.133710] nvme 0000:06:00.0: PCIe Bus Error: severity=Corrected, type=Physical Layer, (Receiver ID)
<4> [179.133716] nvme 0000:06:00.0: device [15b7:5006] error status/mask=00000001/0000e000
<4> [179.133721] nvme 0000:06:00.0: [ 0] RxErr (First)
<4> [179.616823] RIP: 0010:emit_pte.cold.24+0x115/0x17e [i915]
<4> [179.616946] Code: 00 48 c7 c2 90 ed 74 a0 48 c7 c7 20 0a 71 a0 e8 6b fa a9 e0 bf 01 00 00 00 e8 61 c9 a9 e0 31 f6 bf 09 00 00 00 e8 85 05 9a e0 <0f> 0b e8 61 fd ff ff 48 c7 c1 78 3e 78 a0 ba 34 00 00 00 48 c7 c6
<4> [179.616952] RSP: 0018:ffffc900028a7478 EFLAGS: 00010246
<4> [179.616956] RAX: 0000000000000200 RBX: ffffc900028a74f8 RCX: 0000000000000006
<4> [179.616961] RDX: 0000000000000000 RSI: 0000000000000000 RDI: 0000000000000009
<4> [179.616964] RBP: 0000000000000000 R08: 0000000000000001 R09: 0000000000000001
<4> [179.616968] R10: 0000000000000001 R11: ffffc900028a72e0 R12: 000000000000081b
<4> [179.616972] R13: ffff8881f4f3bc40 R14: 0000000001840000 R15: ffff88811810c040
<4> [179.616977] FS: 00007f23e66cdc00(0000) GS:ffff88849f780000(0000) knlGS:0000000000000000
<4> [179.616982] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4> [179.616986] CR2: 00007fe3357f1e18 CR3: 000000011dfc8005 CR4: 0000000000770ee0
<4> [179.616990] PKRU: 55555554